syntax = "proto3";
package pb;
import "common.proto";



message ShaBaKeInfoCrossReq{}

message ShaBaKeInfoCrossAck{
 repeated Info WinGuildUserInfo = 1;
 string firstGuildName = 2;
  int32 isEnd = 3;
  int32 serverId = 4;
}

message Info{
	string nickName = 1;
	int32 sex = 2;
	int32 job = 3;
	int32 position = 4; //职位
	Display display = 5;

}

// 战斗
message EnterCrossShaBaKeFightReq {}

message EnterCrossShaBaKeFightAck{
	bool state = 1;
}

message CrossShaBaKeFightEndNtf{
	repeated ShabakeRankScore serverRank = 1;
}

message CrossShabakeOpenNtf{
	bool isOpen = 1;
}

message ShabakeRankScore {
	int32 id = 1;			//serverId
	int32 score = 2;		//积分
}


